[package]
name = "light-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
error-chain = "0.12.4"
bytes = "1.8.0"
futures = "0.3.31"
governor = "0.7.0"
uuid = { version = "1.11.0", features = ["v4"] }