[package]
name = "light-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.6"
dashmap = "6.1.0"
tokio-util = "0.7.13"